--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/storage": "^7.12.1",
-    "axios": "^1.7.7",
+    "axios": "^1.3.4",
     "csv-parser": "^3.0.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.20.0"
+    "dotenv": "^16.0.3",
+    "express": "^4.20.0",
+    "papaparse": "^5.3.2"
   }
 }
